// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageLinks /> all navigations are disabled when there is only 1 page 1`] = `
<div
  className="page-links"
>
  <button
    disabled={true}
    onClick={[Function]}
  >
    &lt;&lt; First
  </button>
  <button
    disabled={true}
    onClick={[Function]}
  >
    &lt; Prev
  </button>
  <button
    disabled={true}
    onClick={[Function]}
    value={1}
  >
    1
  </button>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Next &gt;
  </button>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Last &gt;&gt;
  </button>
</div>
`;

exports[`<PageLinks /> renders links to each page 1`] = `
<div
  className="page-links"
>
  <button
    disabled={true}
    onClick={[Function]}
  >
    &lt;&lt; First
  </button>
  <button
    disabled={true}
    onClick={[Function]}
  >
    &lt; Prev
  </button>
  <button
    disabled={true}
    onClick={[Function]}
    value={1}
  >
    1
  </button>
  <button
    disabled={false}
    onClick={[Function]}
    value={2}
  >
    2
  </button>
  <button
    disabled={false}
    onClick={[Function]}
    value={3}
  >
    3
  </button>
  <button
    disabled={false}
    onClick={[Function]}
    value={4}
  >
    4
  </button>
  <button
    disabled={false}
    onClick={[Function]}
  >
    Next &gt;
  </button>
  <button
    disabled={false}
    onClick={[Function]}
  >
    Last &gt;&gt;
  </button>
</div>
`;
